--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--<link href="css/style.css" rel="stylesheet">-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body>
         
-        <script src="/app/bundle.js">
-            
-        </script>
+        <div id="app"></div>
+
+        <script src="/app/bundle.js"></script>
     </body>
 </html>
